[BUGFIX] Fix wrong  spacing

--- a/src/anilist/style.less
+++ b/src/anilist/style.less
@@ -8,7 +8,7 @@
   .mal-sync-stream{
     position: absolute;
     max-height: 17px !important;
-    left: 12px;
+    left: 7px;
     top: -17px;
     background: rgba(var(--color-overlay),.8);
     border-radius: 100% 100% 0 0;
@@ -20,8 +20,9 @@
   .nextStream, .resumeStream{
     position: absolute;
     max-height: 17px !important;
-    right: 12px;
+    right: 7px;
     top: -15px;
+    margin-right: 0px !important;
     background: rgba(var(--color-overlay),.8);
     border-radius: 100% 100% 0 0;
     img{
